infra/k8s/services/auth-mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-svc
spec:
  selector:
    app: auth-mongo
  ports:
    - name: auth-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
