infra/k8s/services/tickets-mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-svc
spec:
  selector:
    app: tickets-mongo
  ports:
    - name: tickets-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
